--- a/cosinesim/package/CMakeLists.txt
+++ b/cosinesim/package/CMakeLists.txt
@@ -19,15 +19,14 @@ project(xilinx-cosinesim)
 set (CMAKE_CXX_STANDARD 14)
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")
 
-set(AML_FILE_PATH "${CMAKE_SOURCE_DIR}/../staging/") 
-install(FILES "${AML_FILE_PATH}/lib/libXilinxCosineSim_loader.a" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim/lib)
-install(FILES "${AML_FILE_PATH}/lib/libXilinxCosineSim.so" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim/lib)
+set(CS_FILE_PATH "${CMAKE_SOURCE_DIR}/../staging/")
+install(DIRECTORY "${CS_FILE_PATH}/lib/" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim/lib)
 
-install(FILES "${AML_FILE_PATH}/xclbin/cosinesim_32bit_xilinx_u50_gen3x16_xdma_201920_3.xclbin" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim/xclbin)
-install(FILES "${AML_FILE_PATH}/include/cosinesim.hpp" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim/include)
+install(FILES "${CS_FILE_PATH}/xclbin/cosinesim_32bit_xilinx_u50_gen3x16_xdma_201920_3.xclbin" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim/xclbin)
+install(FILES "${CS_FILE_PATH}/include/cosinesim.hpp" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim/include)
 
-install(FILES "${AML_FILE_PATH}/src/cosinesim_loader.cpp" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim/src)
-install(FILES "${AML_FILE_PATH}/examples.zip" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim)
+install(FILES "${CS_FILE_PATH}/src/cosinesim_loader.cpp" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim/src)
+install(FILES "${CS_FILE_PATH}/examples.zip" DESTINATION ${CMAKE_INSTALL_PREFIX}/cosinesim)
 
 
 #version 
