--- a/cosinesim/package/Makefile
+++ b/cosinesim/package/Makefile
@@ -14,6 +14,7 @@
 #
 PKGDIR := PKG_Release
 RM := rm -rf
+PROD_VERSION := 1.0
 
 OSDIST = $(shell lsb_release -si)
 ifeq ($(OSDIST),Ubuntu)
@@ -24,7 +25,7 @@ endif
 
 package:$(PKGDIR)
 	cd $(PKGDIR); \
-	cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/opt/xilinx/apps/graphanalytics/  ..;\
+	cmake -DCMAKE_BUILD_TYPE=Release -DPROD_VERSION=${PROD_VERSION} -DCMAKE_INSTALL_PREFIX=/opt/xilinx/apps/graphanalytics/  ..;\
 	cmake --build .;\
 	cpack --verbose ; \
 	mv *.${DIST_TARGET} .. ; \
