Changes for package scripts - update plugin installation path as /opt/xilinx/apps/graphanalytics/integration/Tigergraph-3.x/1.0/ - update python3 requirement as 3.6

--- a/plugin/tigergraph/package/CMakeLists.txt
+++ b/plugin/tigergraph/package/CMakeLists.txt
@@ -20,14 +20,17 @@ set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1 CACHE INTERNAL "No dev warnings")
 set (CMAKE_CXX_STANDARD 14)
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")
 set (PROJ_FILE_PATH "${CMAKE_SOURCE_DIR}/../staging/")
+set(CMAKE_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/${PROD_VERSION}")
 
-install(DIRECTORY "${PROJ_FILE_PATH}/examples" DESTINATION ${CMAKE_INSTALL_PREFIX}/)
-install(DIRECTORY "${PROJ_FILE_PATH}/udf" DESTINATION ${CMAKE_INSTALL_PREFIX}/)
-install(DIRECTORY "${PROJ_FILE_PATH}/jupyter-demo" DESTINATION ${CMAKE_INSTALL_PREFIX}/)
-install(FILES "${PROJ_FILE_PATH}/install-plugin.sh" DESTINATION ${CMAKE_INSTALL_PREFIX}/)
+install(DIRECTORY "${PROJ_FILE_PATH}/bin" DESTINATION ${CMAKE_INSTALL_PATH}/)
+install(DIRECTORY "${PROJ_FILE_PATH}/examples" DESTINATION ${CMAKE_INSTALL_PATH}/)
+install(DIRECTORY "${PROJ_FILE_PATH}/udf" DESTINATION ${CMAKE_INSTALL_PATH}/)
+install(DIRECTORY "${PROJ_FILE_PATH}/jupyter-demo" DESTINATION ${CMAKE_INSTALL_PATH}/)
+install(FILES "${PROJ_FILE_PATH}/install.sh" DESTINATION ${CMAKE_INSTALL_PATH}/)
 
-set(CPACK_PACKAGE_NAME "xilinx-recomengine-tigergraph")
-set(PROJ_VERSION_RELEASE "1.0.0")
+set(CPACK_PACKAGE_NAME "xilinx-recomengine-tigergraph-${PROD_VERSION}")
+set(CPACK_PACKAGE_VERSION "1.0.0")
+
 
 # --- LSB Release ---
 find_program(LSB_RELEASE lsb_release)
@@ -67,11 +70,11 @@ elseif (${LINUX_FLAVOR} MATCHES "^(RedHat|CentOS|Amazon)")
 
 endif()
 
-set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${PROJ_VERSION_RELEASE}_${CPACK_REL_VER}-${CPACK_ARCH}")
+set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${CPACK_REL_VER}-${CPACK_ARCH}")
 
 message("-- ${CMAKE_BUILD_TYPE} ${PACKAGE_KIND} package")
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "xrt (>= 2.8.0),xrm (>= 1.2.0),python3 (>= 3.5.0)")
-set(CPACK_RPM_PACKAGE_DEPENDS "xrt (>= 2.8.0), xrm (>= 1.2.0),python3 (>= 3.5.0)")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "xrt (>= 2.8.0),xrm (>= 1.2.0),python3.6")
+set(CPACK_RPM_PACKAGE_DEPENDS "xrt (>= 2.8.0), xrm (>= 1.2.0),python3 (>= 3.6.0)")
 
 set(CPACK_RPM_PRE_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/rpmpreinst")
 set(CPACK_PACKAGE_CONTACT "Xilinx Recommendation Engine Development Team")
