update files permission to use source permissions

--- a/plugin/tigergraph/package/CMakeLists.txt
+++ b/plugin/tigergraph/package/CMakeLists.txt
@@ -22,11 +22,11 @@ set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")
 set (PROJ_FILE_PATH "${CMAKE_SOURCE_DIR}/../staging/")
 set(CMAKE_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/${PROD_VERSION}")
 
-install(DIRECTORY "${PROJ_FILE_PATH}/bin" DESTINATION ${CMAKE_INSTALL_PATH}/)
-install(DIRECTORY "${PROJ_FILE_PATH}/examples" DESTINATION ${CMAKE_INSTALL_PATH}/)
-install(DIRECTORY "${PROJ_FILE_PATH}/udf" DESTINATION ${CMAKE_INSTALL_PATH}/)
-install(DIRECTORY "${PROJ_FILE_PATH}/jupyter-demo" DESTINATION ${CMAKE_INSTALL_PATH}/)
-install(FILES "${PROJ_FILE_PATH}/install.sh" DESTINATION ${CMAKE_INSTALL_PATH}/)
+install(DIRECTORY "${PROJ_FILE_PATH}/bin" DESTINATION ${CMAKE_INSTALL_PATH}/ USE_SOURCE_PERMISSIONS )
+install(DIRECTORY "${PROJ_FILE_PATH}/examples" DESTINATION ${CMAKE_INSTALL_PATH}/ USE_SOURCE_PERMISSIONS )
+install(DIRECTORY "${PROJ_FILE_PATH}/udf" DESTINATION ${CMAKE_INSTALL_PATH}/ USE_SOURCE_PERMISSIONS )
+install(DIRECTORY "${PROJ_FILE_PATH}/jupyter-demo" DESTINATION ${CMAKE_INSTALL_PATH}/ USE_SOURCE_PERMISSIONS )
+install(PROGRAMS "${PROJ_FILE_PATH}/install.sh" DESTINATION ${CMAKE_INSTALL_PATH}/ )
 
 set(CPACK_PACKAGE_NAME "xilinx-recomengine-tigergraph-${PROD_VERSION}")
 set(CPACK_PACKAGE_VERSION "1.0.0")
