--- a/plugin/tigergraph/package/Makefile
+++ b/plugin/tigergraph/package/Makefile
@@ -15,7 +15,7 @@
 PKGDIR := PKG_Release
 RM := rm -rf
 PLUGIN := Tigergraph-3.x
-PROD_VERSION := 1.0
+PROD_VERSION := $(strip $(shell cat ../staging/VERSION))
 
 OSDIST = $(shell lsb_release -si)
 ifeq ($(OSDIST),Ubuntu)
