Multi-node working

--- a/plugin/tigergraph/examples/synthea/Makefile
+++ b/plugin/tigergraph/examples/synthea/Makefile
@@ -1,9 +1,11 @@
+../../../../cosinesim/staging/lib/libXilinxCosineSim.so: ../../../../cosinesim/src/cosinesim.cpp
+	cd ../../../../cosinesim && \
+	make DEBUG=1 all 
 
-
-../../install-plugin-done: ../../udf/xilinxRecomEngine.hpp ../../udf/xilinxRecomEngineImpl.hpp
+../../install-plugin-done: ../../udf/xilinxRecomEngine.hpp ../../udf/xilinxRecomEngineImpl.hpp ../../../../cosinesim/staging/lib/libXilinxCosineSim.so
 	cd ../../ && \
-	./install-plugin-cluster.sh && \
-	touch install-plugin-done
+	./install.sh && \
+	touch install-done
 
 ./install-query-done: query/base.gsql
 	./install_query.sh && touch install-query-done
