[make] refine makefile commit

--- a/louvainmod/kernels/kernel_fast/makefile
+++ b/louvainmod/kernels/kernel_fast/makefile
@@ -34,6 +34,15 @@ help::
 	@echo ""
 	@echo "Makefile Usage:"
 	@echo ""
+	@echo "  make xclbin TARGET=<sw_emu|hw_emu|hw> DEVICE=<FPGA platform>"		
+	@echo "      Command to generate the design for specified target and device."	
+	@echo ""	
+	@echo "      TARGET defaults to sw_emu."	
+	@echo ""	
+	@echo "      DEVICE is case-insensitive and support awk regex."	
+	@echo "      For example, \`make xclbin TARGET=hw DEVICE='u200.*qdma'\`"	
+	@echo "      It can also be an absolute path to platform file."	
+	@echo ""
 	@echo "  make build TARGET=<sw_emu|hw_emu|hw> DEVICE=<FPGA platform>"
 	@echo "      Command to run application in emulation."
 	@echo ""
