--- a/louvainmod/Makefile
+++ b/louvainmod/Makefile
@@ -340,11 +340,7 @@ STAGE_DIR = staging
 
 STAGE_COPY_FILES = \
     VERSION \
-    include/xilinxlouvain.h \
-    include/utils2.hpp \
-    include/xf_graph_L3.hpp \
-    include/common.hpp \
-    include/defs.h 
+    include/xilinxlouvain.h 
 
 define STAGE_COPY_RULE
 $$(STAGE_DIR)/$(1): $(1)
