run.sh amd Makefile working after directory rename

--- a/plugin/tigergraph/comdetect/Makefile
+++ b/plugin/tigergraph/comdetect/Makefile
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-EXAMPLE_DIR = examples/louvainmod
+EXAMPLE_DIR = examples/comdetect
 
 # Files to be direct-copied from plugin source tree to staging area
 
